Fixed overflowing button

--- a/src/components/no-matter-what/no-matter-what.module.scss
+++ b/src/components/no-matter-what/no-matter-what.module.scss
@@ -63,6 +63,8 @@
   height: 84px;
 
   @include media("<=tablet") {
-    height: 60px;
+    max-width: unset;
+    width: fit-content;
+    height: unset;
   }
 }
